4.43: 10/XX/2012 (svn rYYYY)

4.42: 9/27/2012 (svn r2653)
	* CORE: Added basic INNER and LEFT JOIN capabilities for queries only.  Finally.  Work in progress.
	* CORE: Added ObjectFactory support on the DAO to better support Guice and other wiring.  Thanks to glenviewjeff.
	* CORE: Fixed a bug in comparing superclasses of the field with the field.  Thanks to glenviewjeff.  Bug #3538777.
	* CORE: Fixed problems with java.sql.Date and Timestmp persisters.  Thanks to Mohammad Moghimi.  Bug #3534395.
	* CORE: Added queryRawValue() method to the DAO for getting a single aggregate result.
	* CORE: Added last(), moveAbsolute(), and close() methods to DatabaseResults.  Thanks to Andrey.
	* CORE: Added a Dao.getConnectionSource() method to assign with the RuntimeExceptionDao.  Thanks to glenviewjeff.	
	* CORE: Added closeQuietly() methods for all close() methods in a number of classes/interfaces.
	* CORE: Added Dao.executeRawNoArgs() method for executing raw statements with no arguments.  Necessary for JDBC fix.
	* CORE: Added the ability to order your foreign collections ASC or DESC.  Thanks to Jaykob.  Feature #3571690.
	* ANDROID: Added support for auto-commit under Android using transactions.  Thanks to Chad Schultz.
	* ANDROID: Added getCount() and getPosition() cursor methods AndroidDatabaseResults.  Thanks to Andrey.
	* JDBC: Fixed some problems with the OracleDatabaseType.  Work in progress.  Thanks much to Stew.
	* JDBC: Added OTHER to the SqlType enum for custom persisters.  Thanks to Mark Rogers.
	* JDBC: Added a DatabaseConnection.executeStatement() method which uses Statement.execute() for SQL. Thanks to Stew.
	* JDBC: Fixed a problem with Oracle where we were asking for column info too early.  Thanks to Stew.  Bug #3570129.

4.41: 6/6/2012 (svn r2575)
	* CORE: Added java.sql.Date and java.sql.Timestmp data persister types.  java.util.Date is still recommended.