@@ -1,4 +1,5 @@
 4.43: 10/XX/2012 (svn rYYYY)
+	* CORE: Added QueryBuilder.countOf() shortcut to get the count of results from a query.
 
 4.42: 9/27/2012 (svn r2653)
 	* CORE: Added basic INNER and LEFT JOIN capabilities for queries only.  Finally.  Work in progress.
